unpackaged/objects/wb_Service__c.object
<CustomObject>
    <description>WellBe Services Master</description>
    <fields>
        <fullName>Abbreviation__c</fullName>
        <label>短縮</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>代理</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>支店</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CardPrefix__c</fullName>
        <label>カード接頭</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommissionRate__c</fullName>
        <label>手数料率</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commodity__c</fullName>
        <label>商品</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactNumber__c</fullName>
        <label>問い合わせ番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>国</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cps_AfterDeathImpediment__c</fullName>
        <label>（強制）死亡後遺障害</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_MedicalCost__c</fullName>
        <label>（強制）医療費用</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_NoLbtAfterDeathImpediment__c</fullName>
        <label>（強制）無責任死亡後遺障害</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_NoLbtAfterDeathMedicalCost__c</fullName>
        <label>（強制）無責任医療費用</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_NoLbtPropertyLoss__c</fullName>
        <label>（強制）無責任財産損失</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cps_PropertyLoss__c</fullName>
        <label>（強制）財産損失</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>通貨</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <label>データタイプ</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discountable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>割引有効</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisplayOrder__c</fullName>
        <label>表示順</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DriverFee__c</fullName>
        <label>運転手料金</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DriverSeatInsurance__c</fullName>
        <label>運転席保険</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enable__c</fullName>
        <defaultValue>true</defaultValue>
        <label>有効</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>グループ</label>
        <referenceTo>wb_Service__c</referenceTo>
        <relationshipLabel>サービス (グループ)</relationshipLabel>
        <relationshipName>GroupItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MainType__c</fullName>
        <label>メイン・タイプ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>席数</fullName>
                </value>
                <value>
                    <fullName>固定</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxSeat__c</fullName>
        <label>最大席数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinSeat__c</fullName>
        <label>最低付保座席数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OptionType__c</fullName>
        <label>Optタイプ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>席数</fullName>
                </value>
                <value>
                    <fullName>固定</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParentService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>親サービス</label>
        <referenceTo>wb_Service__c</referenceTo>
        <relationshipLabel>子サービス</relationshipLabel>
        <relationshipName>ChildService</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PassengerFee__c</fullName>
        <label>搭乗者料金</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>プラン</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceAreaCd__c</fullName>
        <label>サービスエリアコード</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceClassification__c</fullName>
        <label>区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>会員</fullName>
                </value>
                <value>
                    <fullName>健診</fullName>
                </value>
                <value>
                    <fullName>車保</fullName>
                </value>
                <value>
                    <fullName>搭乗</fullName>
                </value>
                <value>
                    <fullName>強制</fullName>
                </value>
                <value>
                    <fullName>任意</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>現地医療</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceCompany__c</fullName>
        <label>サービス会社</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceFee__c</fullName>
        <label>サービス費</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>サービス</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>サービス</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>サービス名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>